Fix remaining alignment issues

--- a/assets/sass/dashboard.sass
+++ b/assets/sass/dashboard.sass
@@ -1,13 +1,23 @@
-.dashboard
-  display: flex
-  flex-direction: row
-  overflow-y: hidden
+$sidebar-width: 25rem
 
+.dashboard
   &-panel
     &.sidebar
+      +fixed
+      width: $sidebar-width
       background-color: $white-bis
-      flex: 0 0 25rem
       border-right: 1.25px solid $grey-lighter
+      bottom: 0px
+      top: $navbar-height
+      +column
+      overflow: auto
     &.main
-      flex: 1
+      display: block
+      position: relative
       overflow-y: auto
+      top: $navbar-height
+
+      +desktop
+        margin-left: $sidebar-width
+      +mobile
+        top: $navbar-height * 2
