--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -64,6 +64,10 @@ $code-background: $light
       margin-top: .3rem
 
 .under-nav
+  top: $navbar-height
+  position: fixed
+  display: block
+  width: 100%
   z-index: 1
 
 =desktop-shrink
